# FPV

./: README.md  setup.sh
Docker/: README.md  dockerfile  sources.list
Env/: README.md  setup.sh
Hardware/: README.md
Hardware/conf/: ge-carried-p3767-0000-a0.conf
Model/: README.md  best.pth  env_test.py  eval.py  final.pth  ge_env.py  geom_test.py  main.py  model.py  model_old.py  setup.sh  test.py  train.py  train_old.py
Model/DiffPhysDrone/: README.md  checkpoint0000.pth  checkpoint0001.pth  checkpoint0002.pth  checkpoint0003.pth  checkpoint0004.pth
Model/DiffPhysDrone/checkpoint0004/: data.pkl
Model/DiffPhysDrone/checkpoint0004/.data/: serialization_id
Model/DiffPhysDrone/checkpoint0004/data/: 0  1  10  2  3  4  5  6  7  8  9
Model/DiffPhysDrone/src/: build.sh  dynamics_kernel.cu  environment.yml  install.sh  quadsim.cpp  quadsim_kernel.cu  setup.py  test.py
Model/best/: final.pth
Model/best/hover/: checkpoint_model_gru.pth
Model/drone/: camera.py  controller.py  image.py  pid.py
Model/env/: geom new.py  geom.py  pid.py  robot.py  sensor.py  test.py  util.py  visual.py
Model/env_new/: robot.py  sensor.py
Model/env_old/: geom.py  util.py  visual.py
Model/genesis/: ge_env.py  ge_fpv.urdf
Model/genesis/drone/: camera.py  controller.py
Model/kernel/: env.py  genesis_bridge.py  geom.py  geometry.py  pid.py  solver.py  util.py  visual.py
Model/kernel/cpu/: dynamics.py  genesis_bridge.py  main.py  solver.py  util.py
Model/kernel_old/: controller.py.unused  geometry.py  sensor.py  solver.py
Model/old/: main.py  main.py.old
Model/old/kernel/: geometry.py
Model/old/kernel_old/: util.py
Model/robot/drone/: model.py  train.py
Model/robot/rigid/: model.py  train.py
Model/test/: diff_train.py  model.py  train.py
Model/test/env/: geom.py  loss.py  util.py
Model/test/urdf/: ge_fpv.urdf
Node/: README.md  setup.sh
Node/EGO_Planner/: README.md
Node/EGO_Planner/self_launch/: advanced_param.launch.py
Node/ORB_Slam3/Workspace/: CMakeLists.txt  README.md  orb_slam3.cpp  setup.bash
Node/ORB_Slam3/Workspace/setting/: orbbec_gemini.yaml
Node/ORB_Slam3/Workspace/src/: orb_slam3.cpp
Node/ORB_Slam3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Node/ORB_Slam3/install/orb_slam3/share/orb_slam3/: local_setup.sh  package.dsv  package.ps1  package.sh
Node/ORB_Slam3/install/orb_slam3/share/orb_slam3/cmake/: orb_slam3Config.cmake
Node/ORB_Slam3/log/: latest_build
Node/ORB_Slam3_Test/: CMakeLists.txt  CMakeLists.txt.bak  README.md  package.xml  setup.bash
Node/ORB_Slam3_Test/include/: orb_slam3.h
Node/ORB_Slam3_Test/install/: local_setup.sh  setup.sh
Node/ORB_Slam3_Test/install/orbslam3/share/orbslam3/: package.sh
Node/ORB_Slam3_Test/log/: latest_build
Node/ORB_Slam3_Test/setting/: camera.yaml.bak  orbbec_gemini.yaml
Node/ORB_Slam3_Test/src/: test.cpp
Node/OrbbecCamera/Workspace/: CMakeLists.txt  README.md  package.xml
Node/OrbbecCamera/Workspace/src/: orbbec_camera.cpp
Node/OrbbecCamera/install/: local_setup.sh  setup.sh
Node/OrbbecCamera/install/orbbec_camera/share/ament_index/resource_index/package_run_dependencies/: orbbec_camera
Node/OrbbecCamera/install/orbbec_camera/share/orbbec_camera/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
Node/OrbbecCamera/log/: latest_build
Node/PX4/PX4_ROS2_WS/: launch.sh  setup.sh
PX4/: GE_FPV.params  README.md
